# avys-3d

./: Cargo.toml
assets/data/: config.ron  update.ron  world_gen.ron
src/: args.rs  data.rs  game.rs  main.rs  update.rs
src/level/: build.rs  gen_data.rs  infinite.rs  mod.rs
src/player/: mod.rs
