[package]
name = "avys-3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.0"
bevy_panorbit_camera = "0.23"
noise = "0.9.0"
ron = "0.10.1"
serde = "1.0.219"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
